--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@
 .hContainer {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-left: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 350px;
     margin-right: 300px;
     color: white;
     font-size: 20px;
