--- a/style.css
+++ b/style.css
@@ -152,7 +152,16 @@
 
 
   /* Akash Varughese Joseph	20112002 starts here */
-  
+  .hContainer20112002{
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 100px;
+    margin-right: 200px;
+    color: white;
+    font-size: 20px;
+  }
+
   /* Akash Varughese Joseph	20112002 ends here */
 
 
