--- a/style.css
+++ b/style.css
@@ -440,7 +440,15 @@
 
 
   /* Lydia Monoi	20112309 starts here */
-  
+  .hContainer20112309{
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-left: 300px;
+    margin-right: 300px;
+    color: white;
+    font-size: 20px;
+  }
   /* Lydia Monoi	20112309 ends here */
 
 
