--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@
  *  Blue Background
  **********************************************************************/
 .blue{
-    background: #7abcff; /* Old browsers */
+    background: blue; /* Old browsers */
     background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7abcff), color-stop(44%,#60abf8), color-stop(100%,#4096ee)); /* Chrome,Safari4+ */
     background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10+,Safari5.1+ */
@@ -108,11 +108,11 @@
 /* Demo starts here */
 
 .blue1 {
-    background-color: white;
+    background-color: rgba(0, 255, 183, 0.272);
     /* background-color: #4285F4; */
     border: 3px solid;
-    border-color: #4285F4;
-    color: #4285F4;
+    border-color: #020a16;
+    color: #020e21;
     text-align: left;
     padding-left: 100px;
 }
@@ -130,17 +130,17 @@
 
 .hContainer {
     display: grid;
-    grid-gap: 10px;
+    grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-left: 50px;
     margin-right: 300px;
-    color: white;
-    font-size: 20px;
+    color: rgb(7, 2, 27);
+    font-size: 30px;
 }
 
 .csty {
-    padding: 10px;
-    color: white;
+    padding: 18px;
+    color: rgb(4, 19, 1);
     text-align: center;
 }
 
@@ -251,7 +251,16 @@
 
 
   /* Vidhi Saha	20112036 starts here */
-  
+  .blue2 {
+    background-color: rgb(176, 215, 230);
+}
+.orange1 {
+    background-color: orange;
+}
+.aqua1{
+    background-color: aqua;
+}
+.
   /* Vidhi Saha	20112036 ends here */
 
 
