--- a/style.css
+++ b/style.css
@@ -475,7 +475,15 @@
 
 
   /* Jaansi Raj	20112319 starts here */
-  
+  .hContainer20112002{
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-left: 100px;
+    margin-right: 200px;
+    color: white;
+    font-size: 20px;
+  }
   /* Jaansi Raj	20112319 ends here */
 
 
